<resources>
    <string name="app_name">Serving Size Calculator</string>
    <string name="select_a_pot_to_use">Select a pot to use:</string>
    <string name="add_pot">ADD POT</string>
    <string name="pot_name">Pot Name</string>
    <string name="pot_weight_g">Pot weight(g)</string>
    <string name="pot_name1">Pot Name:</string>
    <string name="pot_weight_g1">Pot weight(g):</string>
    <string name="pot_name2">Pot Name:</string>
    <string name="pot_name3">Pot Name</string>
    <string name="pot_weight_g2">Pot Weight (g)</string>
    <string name="pot_weight_g3">Pot weight (g):</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="pot">Pot</string>
    <string name="textview">TextView</string>
    <string name="weight_empty_g">Weight empty (g)</string>
    <string name="weight_with_food_g">Weight with food (g)</string>
    <string name="weight_of_food_g">Weight of food (g)</string>
    <string name="servings">#Servings</string>
    <string name="serving_weight">Serving Weight</string>
    <string name="back">BACK</string>
    <string name="delete_pot">DELETE POT</string>
    <string name="added_error_checking_delete_pot">Added Error Checking, Delete Pot</string>
</resources>
